<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/btn_green"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/back_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="返回"
            android:textSize="@dimen/sp_24"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/dp_15"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/verify_user_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/body_ll"
            style="@style/text_layout"
            android:visibility="visible">

            <TextView
                android:id="@+id/body_hint_tv"
                style="@style/text_hint"
                android:text="@string/body_input_hint" />

            <EditText
                android:id="@+id/body_input_et"
                style="@style/text_input"
                android:text="@string/body_input_init" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mchid_ll"
            style="@style/text_layout"
            android:visibility="visible">

            <TextView
                android:id="@+id/mchid_hint_tv"
                style="@style/text_hint"
                android:text="@string/mchid_input_hint" />

            <EditText
                android:id="@+id/mchid_input_et"
                style="@style/text_input"
                android:text="@string/mchid_input_init" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/outTradeNo_ll"
            style="@style/text_layout"
            android:visibility="visible">

            <TextView
                android:id="@+id/outTradeNo_hint_tv"
                style="@style/text_hint"
                android:text="@string/outTradeNo_input_hint" />

            <EditText
                android:id="@+id/outTradeNo_input_et"
                style="@style/text_input"
                android:text="@string/outTradeNo_input_init" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/random_ll"
            style="@style/text_layout"
            android:visibility="visible">

            <TextView
                android:id="@+id/random_hint_tv"
                style="@style/text_hint"
                android:text="@string/random_input_hint" />

            <EditText
                android:id="@+id/random_input_et"
                style="@style/text_input"
                android:text="123456" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/totalFee_ll"
            style="@style/text_layout"
            android:visibility="visible">

            <TextView
                android:id="@+id/totalFee_hint_tv"
                style="@style/text_hint"
                android:text="@string/totalFee_input_hint" />

            <EditText
                android:id="@+id/totalFee_input_et"
                style="@style/text_input"
                android:text="@string/totalFee_input_init" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/paySign_ll"
            style="@style/text_layout"
            android:visibility="visible">

            <TextView
                android:id="@+id/paySign_hint_tv"
                style="@style/text_hint"
                android:text="@string/paySign_input_hint" />

            <EditText
                android:id="@+id/paySign_input_et"
                style="@style/text_input"
                android:text="@string/paySign_input_init" />
        </LinearLayout>

        <TextView
            android:id="@+id/transaction_tv"
            style="@style/show_info_btn"
            android:background="@drawable/btn_background"
            android:text="@string/hr_pay" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/hint_words"
            android:textSize="@dimen/sp_20" />

        <EditText
            android:id="@+id/getinfo_show_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_400"
            android:layout_marginBottom="@dimen/dp_30"
            android:background="@drawable/et_bg"
            android:gravity="left|top"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>
</LinearLayout>
</ScrollView>