<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/verify_user_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp_20"
    android:layout_marginRight="@dimen/dp_20"
    android:layout_marginTop="@dimen/dp_20"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/tv_load_appid_save"
        style="@style/show_info_btn"
        android:background="@drawable/btn_background"
        android:text="@string/load_save" />

    <LinearLayout
        style="@style/text_layout"
        android:visibility="visible">

        <TextView
            style="@style/text_hint"
            android:text="@string/appId_input_hint" />

        <EditText
            android:id="@+id/et_appid"
            style="@style/text_input" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_load_secure_key_save"
        style="@style/show_info_btn"
        android:background="@drawable/btn_background"
        android:text="@string/load_save" />
    <LinearLayout
        style="@style/text_layout"
        android:visibility="visible">

        <TextView
            style="@style/text_hint"
            android:text="@string/secureKey_input_hint" />

        <EditText
            android:id="@+id/et_secure_key"
            style="@style/text_input" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_init"
        style="@style/show_info_btn"
        android:background="@drawable/btn_background"
        android:text="@string/demo_in" />

</LinearLayout>