<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/verify_user_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/dp_20"
    android:layout_marginRight="@dimen/dp_20"
    android:layout_marginTop="@dimen/dp_20"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        android:id="@+id/init_sdk"
        style="@style/show_info_btn"
        android:background="@drawable/btn_background"
        android:text="@string/init_sdk" />


    <LinearLayout
        android:id="@+id/usertoken_ll"
        style="@style/text_layout"
        android:visibility="visible">

        <TextView
            android:id="@+id/usertoken_hint_tv"
            style="@style/text_hint"
            android:text="@string/userToken_input_hint" />

        <EditText
            android:id="@+id/usertoken_input_et"
            style="@style/text_input"
            android:text="123456" />
    </LinearLayout>

    <LinearLayout
        style="@style/text_layout"
        android:visibility="visible">

        <TextView
            style="@style/text_hint"
            android:text="@string/mchid_input_hint" />

        <EditText
            android:id="@+id/et_merchant_id"
            style="@style/text_input"
            android:text="123456" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/success_page_ll"
        style="@style/text_layout"
        android:visibility="visible">

        <TextView
            android:id="@+id/show_success_page_tv"
            style="@style/text_hint"
            android:text="@string/show_success_page" />

        <EditText
            android:id="@+id/et_show_success_page"
            style="@style/text_input"
            android:text="true" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/hint_words"
        android:textSize="@dimen/sp_20" />

    <EditText
        android:id="@+id/getinfo_show_et"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_30"
        android:background="@drawable/et_bg"
        android:gravity="left|top"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_20" />
</LinearLayout>