<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/dp_30"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/btn_green"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/back_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="返回"
            android:textSize="@dimen/sp_24"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/dp_15"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/business_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/user_tv"
            style="@style/btn_style"
            android:text="@string/hr_user"
            />

        <TextView
            android:id="@+id/pay_tv"
            style="@style/btn_style"
            android:text="@string/hr_pay"
            />

        <TextView
            android:id="@+id/product_tv"
            style="@style/btn_style"
            android:text="@string/hr_product"
            />

        <TextView
            android:id="@+id/finance_tv"
            style="@style/btn_style"
            android:text="@string/hr_finance"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/detail_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/first_tv"
            style="@style/btn_style"
            />
        <TextView
            android:id="@+id/second_tv"
            style="@style/btn_style"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/third_tv"
            style="@style/btn_style"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/fourth_tv"
            style="@style/btn_style"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/fifth_tv"
            style="@style/btn_style"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/sixth_tv"
            style="@style/btn_style"
            android:visibility="gone"
            />

    </LinearLayout>
</LinearLayout>